13. Aug 2013 Christoph Thielecke <crissi99@gmx.de>
	- memleak on reading catalog at read content fixed
	- some debug info disabled
	- memleak at mediainfo fixed
	- memleak at config class fixed
	- memleak at HDirectoryView fixed
	- double free fixed
	- memleak on setting splitter style fixed
	- memleaks on exit fixed

09. Aug 2013 Christoph Thielecke <crissi99@gmx.de>
	- initial russian translation added (thanks to Vitaly A. Kuzmin)

08. Aug 2013 Christoph Thielecke <crissi99@gmx.de>
	- displaying nfo pattern on debug info disabled
	- return type of isIdentical changed from int to bool 
	- media name not changed after dialog on add media fixed (#53)
	- check for existing media name not only for cd/dvd added
	- missing initialisation of QTextCodec resulting in unability to run mediainfo on accentuated filenames fixed (#55)
	- missing close file handle on xml export fixed (#56)
	- wrong read mode of catalog on xml export fixed (#57)

12. Jan 2012 Christoph Thielecke <crissi99@gmx.de>
	- menu entries/context menu entries for enable/disable encryption added
	- password confirmation on set/change encryption password added

11. Jan 2012 Christoph Thielecke <crissi99@gmx.de>
	- display compiled in features in about dialog added
	- support for encrypted catalog added (requires libcrypto++, can be disabled on compile time)
	
03. Jan 2012 Christoph Thielecke <crissi99@gmx.de>
	- Q_OBJECT macro on ArchiveFile class added
	- cdcat homepage link at info dialog fixed
	- gpl page link at info dialog added
	- crash on cancel of add link dialog fixed (thanks to Alain Aupeix)
	- display path of selected search result entry in status bar added

02. Jan 2012 Christoph Thielecke <crissi99@gmx.de>
	- links now working in regex info dialog (thanks to Alain Aupeix)
	- wikipedia link fixed in regex info dialog

31. Dec 2012 Christoph Thielecke <crissi99@gmx.de>
	- sort catalog by name (descending) added
	- sort catalog by media type (ascending/descending) added